--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -60,7 +60,7 @@
         <div class="m-5 w-100 d-flex flex-wrap">
           <% if (data.books.length>0){ data.books.forEach(books => { %>
 
-            <div class="col-md-3 m-2 d-flex w-25" data-toggle="modal" data-target="#updateBook" onclick="updateBook('<%= books.id %>')" >
+            <a href="/books/<%= books.id %>" class="col-md-3 m-2 d-flex w-25"  >
               <div class="card card-body flex-fill p-0">
                 <img class="card-img-top bookIcon h-100 w-100 img-fluid" src="<%= books.icon %>" alt="..." />
                 <div class="card-body p-2">
@@ -69,13 +69,13 @@
                   </h5>
                   <hr />
                   <div class="text-justify">
-                    <small class="text-secondary">Author:<%= data.author %></small><br />
+                    <small class="text-secondary" >Author:<%= data.author %></small><br />
                     <small class="text-secondary">Serial Number: <%= books.serialNumber %></small><br />
                     <small>Date published:<%= new Date(books.datePublished).toLocaleDateString() ; %></small>
                   </div>
                 </div>
               </div>
-            </div>
+            </a>
 
             <% }) }else{ %>
               <h2>NO BOOK TO DISPLAY</h2>
@@ -85,11 +85,10 @@
     </div>
   </div>
 
-  <!-- Create Book Modal -->
+
   <%- include('./components/create_book.ejs') %>
 
-    <!-- Edit Book Modal -->
-    <%- include('./components/update_book.ejs') %>
+
 
       <%- include('./layout/footer') %>
 
@@ -98,9 +97,7 @@
 
           //  request function 
           const reqFunction = (method, url, data=null) => {
-            console.log(url);
-            console.log(method);
-
+     
             axios({
               method: method,
               url: url,
@@ -108,15 +105,11 @@
               headers: { "Content-Type": "application/json" },
             })
               .then((response) => {
-                console.log(response);
-                if (response.status == 200) {
-                  console.log(response.data);
-                  return response.data;
-                } else {
-                  console.log(response.status);
-                  return response.status;
+                // console.log(response);
+                if (response.data.message){
+                  alert(response.data.message)
+                  location.reload()
                 }
-            
               })
               .catch((err) => {
                 console.log(err);
