--- a/views/components/update_book.ejs
+++ b/views/components/update_book.ejs
@@ -1,24 +1,31 @@
-<div class="modal fade" id="updateBook" data-backdrop="static" data-keyboard="false" tabindex="-1"
+<%- include('../layout/header.ejs') %>
+
+
+
+<div class="" id="updateBook" data-backdrop="static" data-keyboard="false" tabindex="-1"
     role="dialog" aria-labelledby="updateBookTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Add New Book</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <h5 class="modal-title" id="exampleModalLongTitle">Update Book Info</h5>
+
+          <button type="button" class="close" data-dismiss="modal"  aria-label="Close">
+            <a href="/admin">
             <span aria-hidden="true">&times;</span>
+          </a>
           </button>
         </div>
         <div class="modal-body">
           <form id="update_book">
             <div class="form-group">
               <label for="bookName">Book Name</label>
-              <input type="name" class="form-control" name="name" required />
+              <input type="name" class="form-control" value="<%= record.name %>" name="name" required />
               <small class="form-text text-muted">Input book title</small>
             </div>
            
             <div class="form-group">
               <label for="bookIcon">Book Image</label>
-              <input type="url" class="form-control" id="bookIcon" name="icon" required />
+              <input type="url" class="form-control" id="bookIcon" value="<%= record.icon %>" name="icon" required />
               <small id="emailHelp" class="form-text text-muted">Input Book image url</small>
             </div>
 
@@ -26,45 +33,86 @@
               <label for="bookIcon">Book Published?</label>
 
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="isPublished" value="true" required />
+                
+                <input class="form-check-input" type="radio" name="isPublished" value="<%= record.isPublished %>" required />
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="isPublished" value="false" required />
+                <input class="form-check-input" type="radio" name="isPublished" value="<%= record.isPublished %>" required />
                 <label class="form-check-label" for="inlineRadio2">No</label>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="d-flex">
+              <button  type="submit" class="btn btn-primary mr-5">Submit</button>
+              <button type="button" class="btn btn-danger" id="delete_book">Delete Book</button>
+
+            </div>
+ 
+
           </form>
+
         </div>
       </div>
     </div>
   </div>
-
+  <%- include('../layout/footer') %>
+  
   <script>
-    function updateBook(id){
-    console.log(id);
-      reqFunction('GET', `books/${id}`,)
-    }
+document.getElementById('delete_book').addEventListener('click', async(e)=>{
+  e.preventDefault()
 
-const form_data = {
-          name: update_book.name.value,
-          icon: update_book.icon.value,
-          isPublished: update_book.isPublished.value,
-        };
-        
-const update_book = document.getElementById("update_book");
+  await axios({
+                method: 'DELETE',
+                url: '/books/delete/<%= record.id %>',
+              })
+                .then((response) => {
+                  console.log(response);
+                  if (response.data.message){
+                    alert(response.data.message);
+                    window.location.href = "/admin";
+                  }
+                })
+                .catch((err) => {
+                  console.log(err);
+                  // console.log(err.response.data.message);
+                  // login_error.innerHTML = err.response.data.message;
+                });
+                
+})
+
+
+
+  const update_book= document.getElementById("update_book");
 
 // ADD NEW BOOK
-update_book.addEventListener("submit", (e) => {
+update_book.addEventListener("submit", async (e) => {
+  
   e.preventDefault();
-
   const form_data = {
           name: update_book.name.value,
           icon: update_book.icon.value,
           isPublished: update_book.isPublished.value,
         };
    
-  reqFunction('PUT', 'books/1115ecde-f497-449a-987d-855eabda82ae', form_data)
-});
-  </script>
+       await axios({
+                method: 'PUT',
+                url: '/books/update/<%= record.id %>',
+                data: JSON.stringify(form_data),
+              headers: { "Content-Type": "application/json" },
+              })
+                .then((response) => {
+                  console.log(response);
+                  if (response.data.message){
+                    alert(response.data.message);
+                    window.location.href = "/admin";
+                  }
+                })
+                .catch((err) => {
+                  console.log(err);
+                  // console.log(err.response.data.message);
+                  // login_error.innerHTML = err.response.data.message;
+                });
+                console.log(record);
+        })
+    
+    </script>
