--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -122,10 +122,14 @@ signup_form.addEventListener('submit',(e)=>{
         data: JSON.stringify(form_data),
         headers: {'Content-Type': 'application/json',}
     }).then(response=>{
+        if(response.data.message){
+            alert('Author registered successfully')
+            window.location.href = "/login"
+        }
         console.log(response.data)
     }).catch(err=>{
         console.log(err);
-        error_message.innerHTML = "An error occur"
+        error_message.innerHTML = err.response.data.message
     })
 
 })
