--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -9,14 +9,18 @@
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
              <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+             <li class="nav-item"><a class="nav-link" href="/admin">Dashboard</a></li>
              <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-         <div class="d-flex">
+             <div class="d-flex">
             <a href="/signup">
              <button class="btn btn-outline-dark" type="submit">
                Sign up
              </button>
             </a> 
           </div>
+       
+            
+       
              <!-- <li class="nav-item"><a class="nav-link" href="#!">Sign up</a></li> -->
             
           </ul>
@@ -25,3 +29,4 @@
       </div>
     </div>
  </nav>
+
