--- a/views/login.ejs
+++ b/views/login.ejs
@@ -92,7 +92,8 @@
     //     console.log(error); 
     // }
 
-
+    // localStorage.setItem('lastname','Smith');
+    // alert(localStorage.getItem('lastname'));
 
     axios({
         method: 'post',
@@ -101,6 +102,7 @@
         headers: {'Content-Type': 'application/json',}
     }).then(response=>{
         if(response.data.message="Login successful"){
+            localStorage.setItem("loggedIn", "loggedIn");
             window.location.href = "/admin"
         }else{
             login_error.innerHTML = response.data.message
