--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -1,4 +1,6 @@
   <!-- Navigation-->
+
+  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5 d-flex justify-content-between">
        <a class="navbar-brand" href="/">Book Store</a>
@@ -9,9 +11,9 @@
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
              <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
-             <li class="nav-item"><a class="nav-link" href="/admin">Dashboard</a></li>
-             <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-             <div class="d-flex">
+             <li class="nav-item" id="dashboardLink" ><a class="nav-link" href="/admin">Dashboard</a></li>
+             <li class="nav-item" id="loginLink"><a class="nav-link" href="/login">Login</a></li>
+             <div  id="signUpLink">
             <a href="/signup">
              <button class="btn btn-outline-dark" type="submit">
                Sign up
