--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -60,7 +60,7 @@
                         </div>
                       </div>
   
-                    <div class="form-check d-flex justify-content-center mb-5">
+                    <div class="form-check d-flex mb-5">
                       <input required class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                       <label class="form-check-label" for="form2Example3">
                         I agree all statements in <a href="#!">Terms of service</a>
