--- a/views/components/update_author.ejs
+++ b/views/components/update_author.ejs
@@ -36,7 +36,7 @@
               <div class="form-group">
                 <label for="address"></label>
                 <textarea class="form-control" id="address" name="address" rows="3" required><%= data.address %></textarea>
-                <small id="emailHelp" class="form-text text-muted">Input your email</small>
+                <small id="emailHelp" class="form-text text-muted">Input your address</small>
               </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
